2nd commit - changes after and ...

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 	<body>
 		<p>“Hey Buckminster!“</p>
-		<h2>"My name is Victor, and I'm here to commit code"</h2>
+		<h2>"My name is Victor, and I love html and css"</h2>
 	</body>
 
 
