Added href to my github

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<body>
 		<p>“Hey Buckminster!“</p>
 		<h2>"My name is Victor, and I love html and css"</h2>
+		<a href="https://github.com/whimsyniche/"> My GitHub </a>
 	</body>
 
 
