Updated the formatting, removed white spaces

--- a/index.html
+++ b/index.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
 <html>
-
 	<head>
 	<link rel=“stylesheet” type=“css” href=“style.css” />
 	<title>Title Goes Here</title>
 	</head>
-
 	<body>
-		<p>“Hey Buckminster!“</p>
-		<h2>"My name is Victor, and I love html and css"</h2>
-		<a href="https://github.com/whimsyniche/"> My GitHub </a>
+		<h1>Hey Buckminster!</h1>
+		<h2>My name is Victor, and I love html and css</h2>
+		<a href="https://github.com/whimsyniche/">My GitHub</a>
 	</body>
-
-
 </html>
